parser/FOOLParser.java
// Generated from D:/Coding/Intellij/Compilatori-e-Interpreti/grammar\FOOL.g4 by ANTLR 4.7
package parser;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FOOLParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            SEMIC = 1, COLON = 2, COMMA = 3, EQ = 4, LEQ = 5, GEQ = 6, GREATER = 7, LESS = 8, AND = 9,
            OR = 10, NOT = 11, ASM = 12, PLUS = 13, MINUS = 14, TIMES = 15, DIV = 16, TRUE = 17, FALSE = 18,
            LPAR = 19, RPAR = 20, CLPAR = 21, CRPAR = 22, IF = 23, THEN = 24, ELSE = 25, LET = 26,
            IN = 27, VAR = 28, FUN = 29, INT = 30, BOOL = 31, CLASS = 32, EXTENDS = 33, THIS = 34,
            NEW = 35, DOT = 36, VOID = 37, NULL = 38, INTEGER = 39, ID = 40, WS = 41, LINECOMENTS = 42,
            BLOCKCOMENTS = 43, ERR = 44;
    public static final int
            RULE_prog = 0, RULE_classdec = 1, RULE_let = 2, RULE_letnest = 3, RULE_vardec = 4,
            RULE_varasm = 5, RULE_fun = 6, RULE_dec = 7, RULE_type = 8, RULE_exp = 9,
            RULE_term = 10, RULE_factor = 11, RULE_funcall = 12, RULE_newexp = 13,
            RULE_value = 14, RULE_stms = 15, RULE_stm = 16, RULE_method = 17;
    public static final String[] ruleNames = {
            "prog", "classdec", "let", "letnest", "vardec", "varasm", "fun", "dec",
            "type", "exp", "term", "factor", "funcall", "newexp", "value", "stms",
            "stm", "method"
    };

    private static final String[] _LITERAL_NAMES = {
            null, "';'", "':'", "','", "'=='", "'<='", "'>='", "'>'", "'<'", "'&&'",
            "'||'", "'!'", "'='", "'+'", "'-'", "'*'", "'/'", "'true'", "'false'",
            "'('", "')'", "'{'", "'}'", "'if'", "'then'", "'else'", "'let'", "'in'",
            "'var'", "'fun'", "'int'", "'bool'", "'class'", "'extends'", "'this'",
            "'new'", "'.'", "'void'", "'null'"
    };
    private static final String[] _SYMBOLIC_NAMES = {
            null, "SEMIC", "COLON", "COMMA", "EQ", "LEQ", "GEQ", "GREATER", "LESS",
            "AND", "OR", "NOT", "ASM", "PLUS", "MINUS", "TIMES", "DIV", "TRUE", "FALSE",
            "LPAR", "RPAR", "CLPAR", "CRPAR", "IF", "THEN", "ELSE", "LET", "IN", "VAR",
            "FUN", "INT", "BOOL", "CLASS", "EXTENDS", "THIS", "NEW", "DOT", "VOID",
            "NULL", "INTEGER", "ID", "WS", "LINECOMENTS", "BLOCKCOMENTS", "ERR"
    };
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "FOOL.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public FOOLParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class ProgContext extends ParserRuleContext {
        public ProgContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_prog;
        }

        public ProgContext() {
        }

        public void copyFrom(ProgContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class ClassExpContext extends ProgContext {
        public List<TerminalNode> SEMIC() {
            return getTokens(FOOLParser.SEMIC);
        }

        public TerminalNode SEMIC(int i) {
            return getToken(FOOLParser.SEMIC, i);
        }

        public StmsContext stms() {
            return getRuleContext(StmsContext.class, 0);
        }

        public List<ClassdecContext> classdec() {
            return getRuleContexts(ClassdecContext.class);
        }

        public ClassdecContext classdec(int i) {
            return getRuleContext(ClassdecContext.class, i);
        }

        public LetContext let() {
            return getRuleContext(LetContext.class, 0);
        }

        public ExpContext exp() {
            return getRuleContext(ExpContext.class, 0);
        }

        public ClassExpContext(ProgContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof FOOLListener) ((FOOLListener) listener).enterClassExp(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof FOOLListener) ((FOOLListener) listener).exitClassExp(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FOOLVisitor) return ((FOOLVisitor<? extends T>) visitor).visitClassExp(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class LetInExpContext extends ProgContext {
        public LetContext let() {
            return getRuleContext(LetContext.class, 0);
        }

        public StmsContext stms() {
            return getRuleContext(StmsContext.class, 0);
        }

        public ExpContext exp() {
            return getRuleContext(ExpContext.class, 0);
        }

        public TerminalNode SEMIC() {
            return getToken(FOOLParser.SEMIC, 0);
        }

        public LetInExpContext(ProgContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof FOOLListener) ((FOOLListener) listener).enterLetInExp(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof FOOLListener) ((FOOLListener) listener).exitLetInExp(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FOOLVisitor) return ((FOOLVisitor<? extends T>) visitor).visitLetInExp(this);
            else return visitor.visitChildren(this);
        }
    }

    public static class SingleExpContext extends ProgContext {
        public ExpContext exp() {
            return getRuleContext(ExpContext.class, 0);
        }

        public TerminalNode SEMIC() {
            return getToken(FOOLParser.SEMIC, 0);
        }

        public SingleExpContext(ProgContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof FOOLListener) ((FOOLListener) listener).enterSingleExp(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof FOOLListener) ((FOOLListener) listener).exitSingleExp(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FOOLVisitor) return ((FOOLVisitor<? extends T>) visitor).visitSingleExp(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ProgContext prog() throws RecognitionException {
        ProgContext _localctx = new ProgContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_prog);
        int _la;
        try {
            setState(64);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case NOT:
                case MINUS:
                case TRUE:
                case FALSE:
                case LPAR:
                case IF:
                case NEW:
                case INTEGER:
                case ID:
                    _localctx = new SingleExpContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(36);
                    exp();
                    setState(37);
                    match(SEMIC);
                }
                break;
                case LET:
                    _localctx = new LetInExpContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(39);
                    let();
                    setState(44);
                    _errHandler.sync(this);
                    switch (getInterpreter().adaptivePredict(_input, 0, _ctx)) {
                        case 1: {
                            {
                                setState(40);
                                exp();
                                setState(41);
                                match(SEMIC);
                            }
                        }
                        break;
                        case 2: {
                            setState(43);
                            stms();
                        }
                        break;
                    }
                }
                break;
                case CLASS:
                    _localctx = new ClassExpContext(_localctx);
                    enterOuterAlt(_localctx, 3);
                {
                    setState(50);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    do {
                        {
                            {
                                setState(46);
                                classdec();
                                setState(48);
                                _errHandler.sync(this);
                                switch (getInterpreter().adaptivePredict(_input, 1, _ctx)) {
                                    case 1: {
                                        setState(47);
                                        match(SEMIC);
                                    }
                                    break;
                                }
                            }
                        }
                        setState(52);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    } while (_la == CLASS);
                    setState(54);
                    match(SEMIC);
                    setState(56);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (_la == LET) {
                        {
                            setState(55);
                            let();
                        }
                    }

                    setState(62);
                    _errHandler.sync(this);
                    switch (getInterpreter().adaptivePredict(_input, 4, _ctx)) {
                        case 1: {
                            {
                                setState(58);
                                exp();
                                setState(59);
                                match(SEMIC);
                            }
                        }
                        break;
                        case 2: {
                            setState(61);
                            stms();
                        }
                        break;
                    }
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class ClassdecContext extends ParserRuleContext {
        public TerminalNode CLASS() {
            return getToken(FOOLParser.CLASS, 0);
        }

        public List<TerminalNode> ID() {
            return getTokens(FOOLParser.ID);
        }

        public TerminalNode ID(int i) {
            return getToken(FOOLParser.ID, i);
        }

        public TerminalNode LPAR() {
            return getToken(FOOLParser.LPAR, 0);
        }

        public TerminalNode RPAR() {
            return getToken(FOOLParser.RPAR, 0);
        }

        public TerminalNode CLPAR() {
            return getToken(FOOLParser.CLPAR, 0);
        }

        public TerminalNode CRPAR() {
            return getToken(FOOLParser.CRPAR, 0);
        }

        public TerminalNode EXTENDS() {
            return getToken(FOOLParser.EXTENDS, 0);
        }

        public List<VardecContext> vardec() {
            return getRuleContexts(VardecContext.class);
        }

        public VardecContext vardec(int i) {
            return getRuleContext(VardecContext.class, i);
        }

        public List<MethodContext> method() {
            return getRuleContexts(MethodContext.class);
        }

        public MethodContext method(int i) {
            return getRuleContext(MethodContext.class, i);
        }

        public List<TerminalNode> SEMIC() {
            return getTokens(FOOLParser.SEMIC);
        }

        public TerminalNode SEMIC(int i) {
            return getToken(FOOLParser.SEMIC, i);
        }

        public List<TerminalNode> COMMA() {
            return getTokens(FOOLParser.COMMA);
        }

        public TerminalNode COMMA(int i) {
            return getToken(FOOLParser.COMMA, i);
        }

        public ClassdecContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_classdec;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof FOOLListener) ((FOOLListener) listener).enterClassdec(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof FOOLListener) ((FOOLListener) listener).exitClassdec(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FOOLVisitor) return ((FOOLVisitor<? extends T>) visitor).visitClassdec(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ClassdecContext classdec() throws RecognitionException {
        ClassdecContext _localctx = new ClassdecContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_classdec);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(66);
                match(CLASS);
                setState(67);
                match(ID);
                setState(70);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == EXTENDS) {
                    {
                        setState(68);
                        match(EXTENDS);
                        setState(69);
                        match(ID);
                    }
                }

                setState(72);
                match(LPAR);
                setState(81);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << BOOL) | (1L << ID))) != 0)) {
                    {
                        setState(73);
                        vardec();
                        setState(78);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == COMMA) {
                            {
                                {
                                    setState(74);
                                    match(COMMA);
                                    setState(75);
                                    vardec();
                                }
                            }
                            setState(80);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                    }
                }

                setState(83);
                match(RPAR);
                setState(84);
                match(CLPAR);
                setState(90);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << BOOL) | (1L << VOID) | (1L << ID))) != 0)) {
                    {
                        {
                            setState(85);
                            method();
                            setState(86);
                            match(SEMIC);
                        }
                    }
                    setState(92);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(93);
                match(CRPAR);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class LetContext extends ParserRuleContext {
        public TerminalNode LET() {
            return getToken(FOOLParser.LET, 0);
        }

        public TerminalNode IN() {
            return getToken(FOOLParser.IN, 0);
        }

        public List<DecContext> dec() {
            return getRuleContexts(DecContext.class);
        }

        public DecContext dec(int i) {
            return getRuleContext(DecContext.class, i);
        }

        public List<TerminalNode> SEMIC() {
            return getTokens(FOOLParser.SEMIC);
        }

        public TerminalNode SEMIC(int i) {
            return getToken(FOOLParser.SEMIC, i);
        }

        public LetContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_let;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof FOOLListener) ((FOOLListener) listener).enterLet(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof FOOLListener) ((FOOLListener) listener).exitLet(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FOOLVisitor) return ((FOOLVisitor<? extends T>) visitor).visitLet(this);
            else return visitor.visitChildren(this);
        }
    }

    public final LetContext let() throws RecognitionException {
        LetContext _localctx = new LetContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_let);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(95);
                match(LET);
                setState(99);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(96);
                            dec();
                            setState(97);
                            match(SEMIC);
                        }
                    }
                    setState(101);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << BOOL) | (1L << VOID) | (1L << ID))) != 0));
                setState(103);
                match(IN);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class LetnestContext extends ParserRuleContext {
        public TerminalNode LET() {
            return getToken(FOOLParser.LET, 0);
        }

        public TerminalNode IN() {
            return getToken(FOOLParser.IN, 0);
        }

        public List<VarasmContext> varasm() {
            return getRuleContexts(VarasmContext.class);
        }

        public VarasmContext varasm(int i) {
            return getRuleContext(VarasmContext.class, i);
        }

        public List<TerminalNode> SEMIC() {
            return getTokens(FOOLParser.SEMIC);
        }

        public TerminalNode SEMIC(int i) {
            return getToken(FOOLParser.SEMIC, i);
        }

        public LetnestContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_letnest;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof FOOLListener) ((FOOLListener) listener).enterLetnest(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof FOOLListener) ((FOOLListener) listener).exitLetnest(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FOOLVisitor) return ((FOOLVisitor<? extends T>) visitor).visitLetnest(this);
            else return visitor.visitChildren(this);
        }
    }

    public final LetnestContext letnest() throws RecognitionException {
        LetnestContext _localctx = new LetnestContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_letnest);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(105);
                match(LET);
                setState(109);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(106);
                            varasm();
                            setState(107);
                            match(SEMIC);
                        }
                    }
                    setState(111);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << BOOL) | (1L << ID))) != 0));
                setState(113);
                match(IN);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class VardecContext extends ParserRuleContext {
        public TypeContext type() {
            return getRuleContext(TypeContext.class, 0);
        }

        public TerminalNode ID() {
            return getToken(FOOLParser.ID, 0);
        }

        public VardecContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_vardec;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof FOOLListener) ((FOOLListener) listener).enterVardec(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof FOOLListener) ((FOOLListener) listener).exitVardec(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FOOLVisitor) return ((FOOLVisitor<? extends T>) visitor).visitVardec(this);
            else return visitor.visitChildren(this);
        }
    }

    public final VardecContext vardec() throws RecognitionException {
        VardecContext _localctx = new VardecContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_vardec);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(115);
                type();
                setState(116);
                match(ID);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class VarasmContext extends ParserRuleContext {
        public VardecContext vardec() {
            return getRuleContext(VardecContext.class, 0);
        }

        public TerminalNode ASM() {
            return getToken(FOOLParser.ASM, 0);
        }

        public ExpContext exp() {
            return getRuleContext(ExpContext.class, 0);
        }

        public TerminalNode NULL() {
            return getToken(FOOLParser.NULL, 0);
        }

        public VarasmContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_varasm;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof FOOLListener) ((FOOLListener) listener).enterVarasm(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof FOOLListener) ((FOOLListener) listener).exitVarasm(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FOOLVisitor) return ((FOOLVisitor<? extends T>) visitor).visitVarasm(this);
            else return visitor.visitChildren(this);
        }
    }

    public final VarasmContext varasm() throws RecognitionException {
        VarasmContext _localctx = new VarasmContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_varasm);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(118);
                vardec();
                setState(119);
                match(ASM);
                setState(122);
                _errHandler.sync(this);
                switch (_input.LA(1)) {
                    case NOT:
                    case MINUS:
                    case TRUE:
                    case FALSE:
                    case LPAR:
                    case IF:
                    case NEW:
                    case INTEGER:
                    case ID: {
                        setState(120);
                        exp();
                    }
                    break;
                    case NULL: {
                        setState(121);
                        match(NULL);
                    }
                    break;
                    default:
                        throw new NoViableAltException(this);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class FunContext extends ParserRuleContext {
        public TerminalNode ID() {
            return getToken(FOOLParser.ID, 0);
        }

        public TerminalNode LPAR() {
            return getToken(FOOLParser.LPAR, 0);
        }

        public TerminalNode RPAR() {
            return getToken(FOOLParser.RPAR, 0);
        }

        public TypeContext type() {
            return getRuleContext(TypeContext.class, 0);
        }

        public TerminalNode VOID() {
            return getToken(FOOLParser.VOID, 0);
        }

        public StmsContext stms() {
            return getRuleContext(StmsContext.class, 0);
        }

        public List<VardecContext> vardec() {
            return getRuleContexts(VardecContext.class);
        }

        public VardecContext vardec(int i) {
            return getRuleContext(VardecContext.class, i);
        }

        public LetnestContext letnest() {
            return getRuleContext(LetnestContext.class, 0);
        }

        public ExpContext exp() {
            return getRuleContext(ExpContext.class, 0);
        }

        public List<TerminalNode> COMMA() {
            return getTokens(FOOLParser.COMMA);
        }

        public TerminalNode COMMA(int i) {
            return getToken(FOOLParser.COMMA, i);
        }

        public FunContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_fun;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof FOOLListener) ((FOOLListener) listener).enterFun(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof FOOLListener) ((FOOLListener) listener).exitFun(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FOOLVisitor) return ((FOOLVisitor<? extends T>) visitor).visitFun(this);
            else return visitor.visitChildren(this);
        }
    }

    public final FunContext fun() throws RecognitionException {
        FunContext _localctx = new FunContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_fun);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(126);
                _errHandler.sync(this);
                switch (_input.LA(1)) {
                    case INT:
                    case BOOL:
                    case ID: {
                        setState(124);
                        type();
                    }
                    break;
                    case VOID: {
                        setState(125);
                        match(VOID);
                    }
                    break;
                    default:
                        throw new NoViableAltException(this);
                }
                setState(128);
                match(ID);
                setState(129);
                match(LPAR);
                setState(138);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << BOOL) | (1L << ID))) != 0)) {
                    {
                        setState(130);
                        vardec();
                        setState(135);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == COMMA) {
                            {
                                {
                                    setState(131);
                                    match(COMMA);
                                    setState(132);
                                    vardec();
                                }
                            }
                            setState(137);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                    }
                }

                setState(140);
                match(RPAR);
                setState(142);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == LET) {
                    {
                        setState(141);
                        letnest();
                    }
                }

                setState(146);
                _errHandler.sync(this);
                switch (getInterpreter().adaptivePredict(_input, 17, _ctx)) {
                    case 1: {
                        {
                            setState(144);
                            exp();
                        }
                    }
                    break;
                    case 2: {
                        setState(145);
                        stms();
                    }
                    break;
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class DecContext extends ParserRuleContext {
        public VarasmContext varasm() {
            return getRuleContext(VarasmContext.class, 0);
        }

        public FunContext fun() {
            return getRuleContext(FunContext.class, 0);
        }

        public DecContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_dec;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof FOOLListener) ((FOOLListener) listener).enterDec(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof FOOLListener) ((FOOLListener) listener).exitDec(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FOOLVisitor) return ((FOOLVisitor<? extends T>) visitor).visitDec(this);
            else return visitor.visitChildren(this);
        }
    }

    public final DecContext dec() throws RecognitionException {
        DecContext _localctx = new DecContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_dec);
        try {
            setState(150);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 18, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(148);
                    varasm();
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(149);
                    fun();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class TypeContext extends ParserRuleContext {
        public TerminalNode INT() {
            return getToken(FOOLParser.INT, 0);
        }

        public TerminalNode BOOL() {
            return getToken(FOOLParser.BOOL, 0);
        }

        public TerminalNode ID() {
            return getToken(FOOLParser.ID, 0);
        }

        public TypeContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_type;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof FOOLListener) ((FOOLListener) listener).enterType(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof FOOLListener) ((FOOLListener) listener).exitType(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof FOOLVisitor) return ((FOOLVisitor<? extends T>) visitor).visitType(this);
            else return visitor.visitChildren(this);
        }
    }
